# mcp_exmple

./: Dockerfile  pyproject.toml  welcome.py
