[project]
name = "mcp-welcome"
version = "0.1.0"
description = "A simple MCP server"
authors = [{ name = "Keerthi", email = "keerthi@example.com" }]
requires-python = ">=3.10"

dependencies = [
    "mcp",        # main MCP library
    "pydantic",   # for Field
]

[tool.uv]
index-url = "https://pypi.org/simple"
